# email-sleuth

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  email-sleuth.toml  install.sh
.github/workflows/: release.yaml
examples/: example-contacts.json
src/: api.rs  config.rs  dns.rs  domain.rs  error.rs  main.rs  models.rs  patterns.rs  processor.rs  scraper.rs  sleuth.rs  smtp.rs
ui/: index.html
