[package]
name = "email-sleuth"
version = "0.1.0"
edition = "2024"
authors = ["Kerim Buyukakyuz kerim@trylon.ai"]
description = "A tool to find and verify email addresses associated with contacts and company websites."
license = "MIT"
repository = "https://github.com/tokenizer-decode/email-sleuth"


[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tokio-rustls = "0.26.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
rustls = "0.21"
scraper = "0.23.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = { version = "2.5", features = ["serde"] }
regex = "1.10"
trust-dns-resolver = { version = "0.23", features = ["tokio", "rustls"] }
lettre = { version = "0.11", default-features = false, features = [
    "tokio1", 
    "builder", 
    "smtp-transport", 
    "rustls", 
    "tokio1-rustls",
    "ring",
    "rustls-native-certs"
]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = { version = "0.17", features = ["tokio"] }
rand = "0.8"
thiserror = "1"
anyhow = "1"
once_cell = "1"
clap = { version = "4.4", features = ["derive", "env"] }
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = 'abort'